ui/web_modules/sourcegraph/blob/styles/Monaco.css
/* ... */
:global div.monaco-editor.vs-dark .codelens-decoration > a:active {
	background-color: c_black_30;
	color: c_cool_pale_gray !important;
}


:global div.monaco-editor .codelens-decoration.invisible-cl {
	background-color: c_cool_gray_2;
	height: 24px !important;
	min-width: 120px;
}

:global .monaco-workbench-container {
	/* Default position:absolute causes https://github.com/sourcegraph/sourcegraph/issues/3277. */
	position: fixed !important;
}

:global .monaco-workbench > .part > .composite.title {
	height: 45px; /* This value should match editorToolbarHeight in layout.tsx */
	overflow: visible;
	z-index: 1;
}

:global .monaco-workbench > .part > .composite.title > .title-actions {
	display: none;
}

:global .monaco-workbench > .part > .composite.title > .title-label > span {
	font-size: 1.25rem;
	font-weight: 800;
	letter-spacing: 0px;
	vertical-align: middle;
	line-height: 45px;
	color: rgba(213,229,242,1) !important;
	text-transform: initial !important;
}

:global .monaco-tree .monaco-tree-wrapper .monaco-tree-rows {
	color: rgba(213,229,242,1);
}

:global .monaco-sash.vertical {
	display: none;
}

:global .monaco-workbench > .part.editor > .content > .one-editor-silo > .container > .title {
	overflow: initial !important;
}

:global #workbench\.parts\.editor {
	box-shadow: -2px 0 3px 0px rgba(0,0,0,0.1);
}

:global .monaco-menu-container .monaco-menu {
	background: white;
	border-radius: 3px;
}

:global .vs-dark .monaco-workbench .editor-one.monaco-editor-background {
	background: c_cool_dark_gray;
}

:global .vs-dark .monaco-workbench .editor.part.empty.monaco-editor-background {
	background: c_cool_dark_gray;
}

:global .monaco-workbench > .part.sidebar > .content {
	background: c_cool_gray2;
}

:global .monaco-workbench > .part > .content .progress-container {
	top: 43px !important; /* 45px - 2px, just below title bar */
}

:global .context-view.monaco-menu-container {
	box-shadow: none !important;
	border-radius: 3px;
}

:global .ref-tree.inline {
	height: 100%;
}

:global .monaco-editor.vs-dark	.bracket-match {
	display: none
}

:global .monaco-workbench > .part > .title {
	padding-left: 0px !important;
	padding-right: 0px !important;
}

:global .sg-sidebar .monaco-tree .monaco-tree-rows > .monaco-tree-row > .content > .sidebar-references {
	text-overflow: ellipsis;
	overflow: hidden;
}

:global .sg-sidebar .monaco-tree .monaco-tree-rows > .monaco-tree-row {
	color: #233043;
	cursor: pointer;
	overflow: hidden !important;
	width: 100%;
	touch-action: none;
	padding-left: 16px !important;
	padding-right: 13px !important;
	white-space: nowrap !important;
	text-overflow: ellipsis !important;
}

:global .monaco-tree .monaco-tree-rows > .monaco-tree-row > .content > .sidebar-references > .code-content > .function {
	padding-top: 12px;
	text-overflow: ellipsis;
	overflow: hidden;
}

:global .monaco-tree .monaco-tree-rows > .monaco-tree-row > .content > .sidebar-references > .code-content > .function .author-details > img {
	display: inline-block;
	vertical-align: middle;
	width: 16px;
	height: 16px;
	border-radius: 8px;
}

:global .monaco-tree .monaco-tree-rows > .monaco-tree-row > .content > .sidebar-references > .code-content > .function .author-details .name {
	display: inline-block;
	padding-left: 6px;
}

:global .monaco-tree .monaco-tree-rows > .monaco-tree-row > .content > .sidebar-references > .code-content > .function .author-details {
	padding-top: 10px;
	color: #5d7eac;
}

:global .monaco-tree .monaco-tree-rows > .monaco-tree-row > .content > .sidebar-references > .code-content > .function .file-details {
	padding-top: 10px;
	color: #5d7eac;
	overflow: hidden;
	text-overflow: ellipsis;
	direction: rtl;
	text-align: left;
}

:global .monaco-tree .monaco-tree-rows > .monaco-tree-row > .content > .sidebar-references > .code-content > .divider-container {
	padding-top: 10px;
	width: 100%;
}

:global .monaco-tree .monaco-tree-rows > .monaco-tree-row > .content > .sidebar-references > .code-content > .divider-container > .divider {
	width: 100%;
	height: 1px;
	background-color: rgba(201, 211, 227, 0.3);
}

:global .vs-dark .sg-sidebar .monaco-tree div.monaco-tree-row:hover:not(.highlighted):not(.selected):not(.focused) {
  background-color: #1893e7;
  color: white;
}

:global .vs-dark .sg-sidebar .monaco-tree div.monaco-tree-row:hover:not(.highlighted):not(.selected):not(.focused) .content > .sidebar-references > .code-content > .function .author-details {
	color:  #ade0ff;
}

:global .vs-dark .sg-sidebar .monaco-tree div.monaco-tree-row:hover:not(.highlighted):not(.selected):not(.focused) .content > .sidebar-references > .code-content > .function .file-details {
	color:  #ade0ff;
}

:global .monaco-tree .monaco-tree-rows > .monaco-tree-row > .content > .reference-file > .monaco-left-right-widget > .right > .workspace-references-badge-external  {
	color: white;
	background-color: c_orange_L1;
	padding: 4px;
	border-radius: 3px;
}

:global .monaco-tree .monaco-tree-rows > .monaco-tree-row > .content > .reference-file > .monaco-left-right-widget > .right > .workspace-references-badge-local  {
	color: white;
	background-color: c_green;
	padding: 4px;
	border-radius: 3px;
}

:global .sg-sidebar .monaco-tree > .monaco-scrollable-element {
	position: absolute !important;
	top: 0px;
	bottom: 0px;
	left: 0px;
	right: 0px;
}

:global .sg-sidebar .monaco-tree {
	flex: 1 1 auto;
}

:global #workbench\.editors\.stringEditor {
	margin-left: 5px;
}

